--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <form action="" id="myform"  class="form-group">
         <div class="form-group">
           <label for="">Site Name</label>
-          <input type="text" class="form-control" id="siteurl" placeholder="Enter Website Name here">
+          <input type="text" class="form-control" id="sitename" placeholder="Enter Website Name here">
         </div>
         <div class="form-group">
           <label for="">Site Url</label>
@@ -53,5 +53,6 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
